--- a/src/app/views/index.ejs
+++ b/src/app/views/index.ejs
@@ -5,11 +5,15 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+
 </head>
 <body>
     <!-- get the title here -->
     <h1>
+        <!-- create one h1 for each title js  -->
+
         <%= movies %>
     </h1>
 </body>
+<script  />
 </html>
